Fixed issue with nav spacing

--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -66,7 +66,11 @@ ul li a {
     align-items: center;
     justify-content: space-evenly;
     font-size: .7rem;
-    padding: 0 .5rem 0;
+    padding: 0;
+}
+
+.nav-drills-mobile li {
+    padding-inline: .2rem;
 }
 
 .nav-drills-mobile img {
